feat: Reorganize chapter 1

--- a/header.tex
+++ b/header.tex
@@ -3,6 +3,7 @@
 \date{\today}
 \maketitle
 \thispagestyle{empty}
+\pagenumbering{gobble}
 \newpage
 \begin{center}
 Submitted in Partial Fulfillment of the Requirements for the Degree of Engineering Science (Computer Science) of the Nanyang Technological University
@@ -10,11 +11,12 @@ Submitted in Partial Fulfillment of the Requirements for the Degree of Engineeri
 \newpage
 This page is intentionally left blank.
 \newpage
-
+\pagenumbering{roman}
 \begin{abstract}
+\thispagestyle{plain}
     \addcontentsline{toc}{chapter}{Abstract}
     Hello
 \end{abstract}
-
 \tableofcontents
+\setcounter{page}{2}
 \newpage
