--- a/main.tex
+++ b/main.tex
@@ -46,8 +46,11 @@
    captionpos=b
 }
 
+% For images
+\usepackage{graphicx}
+%\graphicspath{ {./images/} }
+
 \linespread{1.25}
-\pagenumbering{roman}
 \begin{document}
 
 \input header.tex
