--- a/methodology.tex
+++ b/methodology.tex
@@ -1,5 +1,19 @@
 \chapter{Implementation}
 
-\section{Parsing}
+For the purpose of this project, we will examine the various syntax for representing functions in Javascript and the implications on how we can extract facts about them.
 
-\section{Module Overview}
+\input ./methodology/cfg.tex
+
+\input ./methodology/module_overview.tex
+
+\input ./methodology/key_methods.tex
+
+\input ./methodology/driver.tex
+
+\input ./methodology/frontend.tex
+
+\section{Symbol Table}
+
+\section{Fact Extraction}
+
+\section{Output Format}
